--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </ul>
             <br>
-            <h3 class="card-subhead">😒FUN-employment isn't so FUN</h3>
+            <h4 class="card-subhead">😒FUN-employment isn't so FUN</h4>
         </nav>
 
         <body style="text-align: center;">
@@ -54,8 +54,7 @@
             </article>
             <article id="work-examples" class="work-examples">
                 <div class="side-content">
-                    <h1>Work</h1>
-                    <h1>Examples</h1>
+                    <h1>Work</h1><h1>Examples</h1>
                 </div>
                 <div class="box-parent">
                     <a href="https://github.com/LeybaAir/Challenge_1_Marketing" target="_blank">
