--- a/index.html
+++ b/index.html
@@ -114,16 +114,23 @@
                         <h2>Work Examples</h2>
                       </div>
 
-                      <div class="owl-carousel owl-theme">
+                        <div class="owl-carousel owl-theme">
                         <div class="item">
-                          <div class="project-info">
-                            <a href="https://docs.google.com/document/d/1TN_GD90gRVMzhssVrJHSJv3A2zuRR6y449Gaa-swzkk/edit?usp=sharing">
-                                <img src="images/project/Screenshot 2023-10-17 023033.png" class="img-fluid smaller-image" alt="project image">
-                            </a>
-                          </div>
+                            <div class="project-info">
+                                <a href="https://docs.google.com/document/d/1TN_GD90gRVMzhssVrJHSJv3A2zuRR6y449Gaa-swzkk/edit?usp=sharing">
+                                    <img src="assets/images/project/Screenshot 2023-10-17 023033.png" class="img-fluid smaller-image" alt="project image">
+                                </a>
+                            </div>
                         </div>
-
-                      </div>
+                    
+                        <div class="item">
+                            <div class="project-info">
+                              <a href="https://docs.google.com/document/d/1TN_GD90gRVMzhssVrJHSJv3A2zuRR6y449Gaa-swzkk/edit?usp=sharing">
+                                <img src="assets/images/project/Screenshot 2023-10-17 023033.png" class="img-fluid smaller-image" alt="project image">
+                            </a>
+                            </div>
+                        </div>
+                    </div>
 
                   </div>
                 </div>
