--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                       <li>I'm a passionate techie with a flair for adventure, currently navigating the dynamic landscape of Sales Enablement. My previous role as a Customer Success Magician saw me transform vexed clients into lifelong champions, earning a reputation as the wizard you'd want by your side.</li>
                       <li>I'm equally an imaginative Creative Explorer, unafraid to venture beyond boundaries to craft inventive solutions and captivating presentations.</li>
                       <li>My boundless energy and contagious enthusiasm make me an Energetic Dynamo, known for lighting up every room I enter.</li>
-                      <li>Embracing spontaneity is my forte – I thrive on the unexpected twists of life's adventurous journey.  If you're seeking someone with a relentless drive for success, creativity, and a thirst for knowledge, let's connect and explore the Sales Enablement cosmos together. 🚀✨</li>
+                      <li>If you're seeking someone with a relentless drive for success, creativity, and a thirst for knowledge, let's connect and explore the Sales Enablement cosmos together. 🚀✨</li>
                   </ul>
  
                   <div class="custom-btn-group mt-4">
