--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <div class="item">
                             <div class="project-info">
                               <a href="https://docs.google.com/document/d/1TN_GD90gRVMzhssVrJHSJv3A2zuRR6y449Gaa-swzkk/edit?usp=sharing">
-                                <img src="images/projects/crafting.email.png" class="img-fluid smaller-image" alt="project image">
+                                <img src="images/project/crafting.email.png" class="img-fluid smaller-image" alt="project image">
                             </a>
                             </div>
                         </div>
