--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
                         </div>
                     
                         <div class="item">
-                            <div class="project-info">
-                              <a href="https://docs.google.com/document/d/1TN_GD90gRVMzhssVrJHSJv3A2zuRR6y449Gaa-swzkk/edit?usp=sharing">
-                                <img src="images/project/crafting.email.png" class="img-fluid smaller-image" alt="project image">
+                        <div style="position:relative;width:fit-content;height:fit-content;">
+                            <iframe allow="autoplay;" allowfullscreen style="border:none; width:640px; height:360px;" src="https://clipchamp.com/watch/F5TzcAu4kyp/embed"></iframe>
+                            <a style="position:absolute;top:20px;right:1rem;opacity:0.8;" href="https://clipchamp.com/watch/F5TzcAu4kyp?utm_source=embed&utm_medium=embed&utm_campaign=watch">
+                                <img loading="lazy" style="height:22px;" src="https://clipchamp.com/e.svg" alt="Made with Clipchamp" />
                             </a>
-                            </div>
                         </div>
                     </div>
 
