--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                             </div>
                         </div>
                     
-                        <div class="item">
-                        <div style="position:relative;width:fit-content;height:fit-content;">
+                    <div class="item text-center">
+                        <div class="project-info mx-auto">
                             <iframe allow="autoplay;" allowfullscreen style="border:none; width:640px; height:360px;" src="https://clipchamp.com/watch/F5TzcAu4kyp/embed"></iframe>
                             <a style="position:absolute;top:20px;right:1rem;opacity:0.8;" href="https://clipchamp.com/watch/F5TzcAu4kyp?utm_source=embed&utm_medium=embed&utm_campaign=watch">
                                 <img loading="lazy" style="height:22px;" src="https://clipchamp.com/e.svg" alt="Made with Clipchamp" />
