--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
                    <div class="item">
                         <div class="project-info">
                             <a href="https://docs.google.com/document/d/1x0EWQpdj-8q1NHf5SkgcUdiFrAE4KQDu66EKFchxFNw/edit?usp=sharing">
-                                <img src="images/project/crafting.email.png" class="img-fluid smaller-image" alt="project image">
+                                <img src="images/project/script example.png" class="img-fluid smaller-image" alt="project image">
                             </a>
                         </div>
                     </div>
                      <div class="item">
                         <div class="project-info">
                             <a href="https://docs.google.com/document/d/1VI1O_-ZQ11Dzz8avu4YmfyhAVqgF3AeZS5t7OS4bAfc/edit?usp=sharing">
-                                <img src="images/project/crafting.email.png" class="img-fluid smaller-image" alt="project image">
+                                <img src="images/project/DiscoveryGuidlines.png" class="img-fluid smaller-image" alt="project image">
                             </a>
                         </div>
                     </div>      
