--- a/index.html
+++ b/index.html
@@ -114,23 +114,25 @@
                         <h2>Work Examples</h2>
                       </div>
 
-                        <div class="owl-carousel owl-theme">
+                    <div class="item text-center">
+                        <div class="project-info mx-auto">
+                            <iframe allow="autoplay;" allowfullscreen style="border:none; width:640px; height:360px;" src="https://clipchamp.com/watch/21Uvh5bwT2r/embed"></iframe>
+                            <a style="position:absolute;top:20px;right:1rem;opacity:0.8;" href="https://clipchamp.com/watch/21Uvh5bwT2r?utm_source=embed&utm_medium=embed&utm_campaign=watch">
+                                <img loading="lazy" style="height:22px;" src="https://clipchamp.com/e.svg" alt="" />
+                            </a>
+                        </div>
+                    </div>
+                    
+                   <div class="owl-carousel owl-theme">
                         <div class="item">
                             <div class="project-info">
                                 <a href="https://docs.google.com/document/d/1TN_GD90gRVMzhssVrJHSJv3A2zuRR6y449Gaa-swzkk/edit?usp=sharing">
                                     <img src="images/project/Screenshot 2023-10-17 023033.png" class="img-fluid smaller-image" alt="project image">
                                 </a>
                             </div>
-                        </div>
+                   </div>
                     
-                    <div class="item text-center">
-                        <div class="project-info mx-auto">
-                            <iframe allow="autoplay;" allowfullscreen style="border:none; width:640px; height:360px;" src="https://clipchamp.com/watch/F5TzcAu4kyp/embed"></iframe>
-                            <a style="position:absolute;top:20px;right:1rem;opacity:0.8;" href="https://clipchamp.com/watch/F5TzcAu4kyp?utm_source=embed&utm_medium=embed&utm_campaign=watch">
-                                <img loading="lazy" style="height:22px;" src="https://clipchamp.com/e.svg" alt="Made with Clipchamp" />
-                            </a>
-                        </div>
-                    </div>
+
                    <div class="item">
                         <div class="project-info">
                             <a href="https://docs.google.com/document/d/1x0EWQpdj-8q1NHf5SkgcUdiFrAE4KQDu66EKFchxFNw/edit?usp=sharing">
