--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
 
                     <div class="item text-center">
                         <div class="project-info mx-auto">
-                            <iframe allow="autoplay;" allowfullscreen style="border:none; width:640px; height:360px;" src="https://clipchamp.com/watch/21Uvh5bwT2r/embed"></iframe>
-                            </a>
+                           <iframe src="https://clipchamp.com/watch/21Uvh5bwT2r/embed" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
                         </div>
                     </div>
 
