--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
 
                     <div class="item text-center">
                         <div class="project-info mx-auto">
-                            <iframe allow="autoplay;" allowfullscreen style="border:none; width:640px; height:360px;" src="https://clipchamp.com/watch/AsKKS1Kn5kz"></iframe>
-                            </a>
+                        <iframe src="https://video-private-assets.canva.com/VAF2qmN9xyQ/v/33733b27cb.mp4?exp=1702297320000&cf-ck=RXbIoq6GT0C1WEbCGfOUdQN9TljRfK7XEMn_EVa4L80&cf-sig=shvocMAFcI2V88scbjp6d4hO18fkyxtX3U_a-WtAp0U&cf-sig-kid=CO7cCjZ_YiI=&sig=q7dgNM6bc2UGI1qkzNNPnE3i_wc0edXWZuffP0ybmIY&sig-kid=GzFgFdhXD-Q=" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
                         </div>
                     </div> 
 
