--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
 
                     <div class="item text-center">
                         <div class="project-info mx-auto">
-                        <iframe src="https://video-private-assets.canva.com/VAF2qspH1J0/v/4627cb2512.mp4?exp=1702298640000&cf-ck=fkciIlceL9gnSh1G9BkF4E8YH5VjDxnMeWP2yKIIDhQ&cf-sig=p9S6lHjVKmnp4iWEp1BxXy8uKoGV8rUBoRK91aegNVQ&cf-sig-kid=CO7cCjZ_YiI=&sig=8tMvEn-Svg8MuNEQD3RhnMEe_qYNTVllsYAkqzZkvWE&sig-kid=GzFgFdhXD-Q=" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
+                        <iframe src="https://youtube.com/shorts/JePVn1B9-fU?feature=share" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
                         </div>
                      </div>
 
                     <div class="item text-center">
                         <div class="project-info mx-auto">
-                        <iframe src="https://video-private-assets.canva.com/VAF2qmN9xyQ/v/33733b27cb.mp4?exp=1702297320000&cf-ck=RXbIoq6GT0C1WEbCGfOUdQN9TljRfK7XEMn_EVa4L80&cf-sig=shvocMAFcI2V88scbjp6d4hO18fkyxtX3U_a-WtAp0U&cf-sig-kid=CO7cCjZ_YiI=&sig=q7dgNM6bc2UGI1qkzNNPnE3i_wc0edXWZuffP0ybmIY&sig-kid=GzFgFdhXD-Q=" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
+                        <iframe src="https://youtu.be/W-SX0PO8gk4" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
                         </div>
                     </div> 
 
