--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
                     <div class="item text-center">
                         <div class="project-info mx-auto">
-                        <iframe src="https://youtu.be/W-SX0PO8gk4" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/W-SX0PO8gk4?si=n78Zv17rNiwObsDA&amp;controls=0" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
                         </div>
                     </div> 
 
