--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                     <div class="item text-center">
                         <div class="project-info mx-auto">
-                        <iframe src="https://youtube.com/shorts/JePVn1B9-fU?si=GcmVUU2RAZgzvI47" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/JePVn1B9-fU" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
                         </div>
                      </div>
 
