--- a/index.html
+++ b/index.html
@@ -78,11 +78,9 @@
                     </h1>
 
                     <ul class="description-list">
-                      <li>I am an enthusiastic professional with a strong technological background and a penchant for embracing challenges, currently navigating the dynamic realm of Sales Enablement. In my previous role as a Customer Success Specialist, I adeptly transformed dissatisfied clients into dedicated advocates, establishing a reputation as a skilled professional ready to tackle any challenge.
-
-Beyond my proficiency in Sales Enablement, I also excel as a Creative Explorer, unafraid to push boundaries to devise innovative solutions and deliver compelling presentations. My unwavering energy and infectious enthusiasm have earned me a reputation as an Energetic Dynamo, capable of positively impacting any environment I enter.
-
-If you are in search of an individual with a persistent commitment to success, a creative mindset, and an insatiable thirst for knowledge, I invite you to connect with me. Together, we can explore the vast landscape of Sales Enablement and embark on a journey of professional growth and success. 🚀✨</li>
+                      <li>I am an enthusiastic professional with a strong technological background and a penchant for embracing challenges, currently navigating the dynamic realm of Sales Enablement. In my previous role as a Customer Success Specialist, I adeptly transformed dissatisfied clients into dedicated advocates, establishing a reputation as a skilled professional ready to tackle any challenge.</li>
+                      <li>Beyond my proficiency in Sales Enablement, I also excel as a Creative Explorer, unafraid to push boundaries to devise innovative solutions and deliver compelling presentations. My unwavering energy and infectious enthusiasm have earned me a reputation as an Energetic Dynamo, capable of positively impacting any environment I enter.</li>
+                      <li>If you are in search of an individual with a persistent commitment to success, a creative mindset, and an insatiable thirst for knowledge, I invite you to connect with me. Together, we can explore the vast landscape of Sales Enablement and embark on a journey of professional growth and success. 🚀✨</li>
                   </ul>
  
                   <div class="custom-btn-group mt-4">
