--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="about-image svg">
-                        <img src="images/project/20220124_152401.jpg" class="img-fluid" alt="png image">
+                        <img src="images/project/new picture.webp" class="img-fluid" alt="png image">
                     </div>
                 </div>
 
